--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hilags</title>
+    <title>Hlegals</title>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/main.min.css">
 
 </head>
 
-<body>
+<body id="body">
     <div class="gradient">
         <header class="container header">
             <div class="mobile">
@@ -35,17 +35,25 @@
                     <a href="" class="logo-mobile">
                         <img src="./img/Logo-on dark.svg" width="78" height="31" alt="logo">
                     </a>
-                    <button type="button" class="menu-button" aria-expanded="false"
-                        aria-label="Перемикач мобільного меню" data-menu-button>
+                    <button type="button" id="mobile-menu-button" class="menu-button menu-button-open">
                         <svg class="menu-button__icon" width="18" height="18">
-                            <use class="icon-menu" href="./img/symbol-defs.svg#icon-hamburger"></use>
-                            <use class="icon-close" href="./img/symbol-defs.svg#icon-close"></use>
+                            <use class="icon-menu" id="icon-menu" href="./img/symbol-defs.svg#icon-hamburger"></use>
+
                         </svg>
                     </button>
-                    <nav class="mobile-nav" data-menu>
+                    <nav class="mobile-nav" id="mobile-nav">
+
+
                         <ul class="mobile-list">
+                            <li class="mobile-item-button">
+                                <button type="button" class="mobile-menu-button menu-button" id="mobile-nav-close">
+                                    <svg class="menu-button__close" width="18" height="18">
+                                        <use class="icon-close" href="./img/symbol-defs.svg#icon-close"></use>
+                                    </svg>
+                                </button>
+                            </li>
                             <li class="mobile-item">
-                                <a href="" class="mobile-links">о нас</a>
+                                <a href="./about-us.html" class="mobile-links">о нас</a>
                             </li>
                             <li class="mobile-item">
                                 <a href="" class="mobile-links">послуги</a>
@@ -73,23 +81,25 @@
                     <div class="top-navigation">
                         <ul class="language desctop-language">
                             <li class="language-item  ">
-                                <button class="button-lang button-lang-desctop current-lang">УК</button>
+                                <button class="button-lang button-lang-desctop-index current-lang">УК</button>
                             </li>
                             <li class="language-item">
-                                <button class="button-lang button-lang-desctop">РУ</button>
+                                <button class="button-lang button-lang-desctop button-lang-desctop-index">РУ</button>
                             </li>
                             <li class="language-item">
-                                <button class="button-lang button-lang-desctop">EN</button>
+                                <button class="button-lang button-lang-desctop button-lang-desctop-index">EN</button>
                             </li>
                         </ul>
-                        <address class="header-address">
+                        <address class=" header-address header-address-index">
                             Одеса, Адміральський пр., 3
                         </address>
-                        <a href="tel:	+38 (050) 390 15 95" class="telephone-desctop">+38 (050) 390 15 95</a>
+                        <a href="tel:	+38 (050) 390 15 95" class="telephone-desctop telephone-desctop-index">+38 (050)
+                            390 15 95</a>
                         <a href="" class="header-icon_links">
 
                             <svg class="header-icon" height="24" weight="24">
-                                <use class="header-icon_facebook" href="./img/symbol-defs.svg#icon-facebook-oval"></use>
+                                <use class="header-icon_facebook-index" href="./img/symbol-defs.svg#icon-facebook-oval">
+                                </use>
                             </svg>
                         </a>
 
@@ -98,19 +108,19 @@
                     <nav class="nav-menu">
                         <ul class="nav-menu-list">
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links">о нас</a>
+                                <a href="./about-us.html" class="nav-menu-links nav-menu-links-index">о нас</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links">послуги</a>
+                                <a href="" class="nav-menu-links-index nav-menu-links">послуги</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links">команда</a>
+                                <a href="" class="nav-menu-links-index nav-menu-links">команда</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links">публікації</a>
+                                <a href="" class="nav-menu-links-index nav-menu-links">публікації</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links">контакти</a>
+                                <a href="" class="nav-menu-links-index nav-menu-links">контакти</a>
                             </li>
                         </ul>
                     </nav>
@@ -124,9 +134,8 @@
             </h1>
             <div class="splash-gradient  ">
                 <button class="splash-button">
-                    <svg class="splash-icon" width="36" height="18">
-                        <use class="icon-scroll" href="./img/symbol-defs.svg#icon-scroll"></use>
-                    </svg>
+                    <img src="./img/arrow-down.svg" alt="scroll down page arrow">
+
                 </button>
             </div>
         </section>
@@ -135,7 +144,7 @@
         <!-- <section class="experience"></section> -->
 
         <section class="services">
-            <h3 class="services-paragraph">послуги &#8250</h3>
+            <a href="" class="services-paragraph">послуги ></a>
             <h2 class="services-title">Що ми вміємо робити краще за інших?</h2>
             <ul class="services-list">
                 <li class="services-item">
@@ -230,9 +239,189 @@
         </section>
 
     </div>
+
     <div class="services-bg-one"></div>
     <div class="services-bg-two"></div>
+    <div class="container">
+        <section class="team">
 
+            <!-- Документация по карусели -->
+            <!-- https://owlcarousel2.github.io/OwlCarousel2/ -->
+            <div>
+                <div class="owl-carousel">
+
+                    <div class="team-card">
+                        <div class="owl-carousel-foto">
+                            <img class="owl-carousel-fotos" src="./img/team-member1.png" alt="">
+                        </div>
+                        <div class="team-card-desctop">
+                            <a href="#" class="team-link">команда ></a>
+                            <h2 class="team-heading">
+                                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть
+                                у
+                                ситуаціях,
+                                коли
+                                більшість безсилі.
+                            </h2>
+
+                            <footer class="team-footer">
+                                <div class="team-member-photo">
+                                    <img src="./img/team-member-avatar.png" alt="">
+                                </div>
+                                <div class="team-member-description">
+                                    <h3 class="team-member-name">Олександр Кац</h3>
+                                    <p class="team-member-occupation">Керуючий партнер</p>
+                                </div>
+                            </footer>
+                        </div>
+
+                    </div>
+
+                    <div class="team-card">
+                        <div class="owl-carousel-foto">
+                            <img src="./img/team-member2.png" alt="">
+                        </div>
+                        <div class="team-card-desctop">
+                            <a href="#" class="team-link">команда ></a>
+                            <h2 class="team-heading">
+                                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть
+                                у
+                                ситуаціях,
+                                коли
+                                більшість безсилі.
+                            </h2>
+
+                            <footer class="team-footer">
+                                <div class="team-member-photo">
+                                    <img class="team-member-ph" src="./img/team-member2.png" alt="">
+                                </div>
+                                <div class="team-member-description">
+                                    <h3 class="team-member-name">Валерій Кобзар</h3>
+                                    <p class="team-member-occupation">Equity partner, Attorney-at-law</p>
+                                </div>
+                            </footer>
+                        </div>
+
+                    </div>
+
+
+                    <div class="team-card">
+                        <div class="owl-carousel-foto">
+                            <img src="./img/team-member3.png" alt="">
+                        </div>
+                        <div class="team-card-desctop">
+                            <a href="#" class="team-link">команда ></a>
+                            <h2 class="team-heading">
+                                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть
+                                у
+                                ситуаціях,
+                                коли
+                                більшість безсилі.
+                            </h2>
+
+                            <footer class="team-footer">
+                                <div class="team-member-photo">
+                                    <img class="team-member-ph" src="./img/team-member3.png" alt="">
+                                </div>
+                                <div class="team-member-description">
+                                    <h3 class="team-member-name">Владислав Мельник</h3>
+                                    <p class="team-member-occupation">Associate</p>
+                                </div>
+                            </footer>
+                        </div>
+
+                    </div>
+
+
+                    <div class="team-card">
+                        <div class="owl-carousel-foto">
+                            <img src="./img/team-member4.png" alt="">
+                        </div>
+                        <div class="team-card-desctop">
+                            <a href="#" class="team-link">команда ></a>
+                            <h2 class="team-heading">
+                                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть
+                                у
+                                ситуаціях,
+                                коли
+                                більшість безсилі.
+                            </h2>
+
+                            <footer class="team-footer">
+                                <div class="team-member-photo">
+                                    <img class="team-member-ph" src="./img/team-member4.png" alt="">
+                                </div>
+                                <div class="team-member-description">
+                                    <h3 class="team-member-name">Владислав Курич</h3>
+                                    <p class="team-member-occupation">Associate</p>
+                                </div>
+                            </footer>
+                        </div>
+
+                    </div>
+                    <div class="team-card">
+                        <div class="owl-carousel-foto">
+                            <img src="./img/team-member5.png" alt="">
+                        </div>
+                        <div class="team-card-desctop">
+                            <a href="#" class="team-link">команда ></a>
+                            <h2 class="team-heading">
+                                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть
+                                у
+                                ситуаціях,
+                                коли
+                                більшість безсилі.
+                            </h2>
+
+                            <footer class="team-footer">
+                                <div class="team-member-photo">
+                                    <img class="team-member-ph" src="./img/team-member5.png" alt="">
+                                </div>
+                                <div class="team-member-description">
+                                    <h3 class="team-member-name">Юлія Гудименко</h3>
+                                    <p class="team-member-occupation">Associate, Attorney-at-law</p>
+                                </div>
+                            </footer>
+                        </div>
+
+                    </div>
+                    <div class="team-card">
+                        <div class="owl-carousel-foto">
+                            <img src="./img/team-member6.png" alt="">
+                        </div>
+                        <div class="team-card-desctop">
+                            <a href="#" class="team-link">команда ></a>
+                            <h2 class="team-heading">
+                                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
+                                навіть
+                                у
+                                ситуаціях,
+                                коли
+                                більшість безсилі.
+                            </h2>
+
+                            <footer class="team-footer">
+                                <div class="team-member-photo">
+                                    <img class="team-member-ph" src="./img/team-member6.png" alt="">
+                                </div>
+                                <div class="team-member-description">
+                                    <h3 class="team-member-name">Оксана Кобзар</h3>
+                                    <p class="team-member-occupation">Equity partner, Attorney-at-law</p>
+                                </div>
+                            </footer>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+    </div>
+    </section>
+    </div>
     <div class="container">
         <!-- <article class="team"></article> -->
         <section class="cases ">
@@ -473,7 +662,10 @@
 
 
     </footer>
+    <script src="./js/jquery.min.js"></script>
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/carousel.js"></script>
     <script src="./js/card.js"></script>
     <script src="./js/show-more.js"></script>
 
