--- a/about-us.html
+++ b/about-us.html
@@ -151,7 +151,55 @@
         </div>
 
     </header>
+    <section class="advantages">
+        <div class="advantages-top">
+            <div class="advantages-top-desctop">
+                <h1 class="title">Перевертаємо уявлення про юридичні послуги.</h1>
+                <p class="text">Консолідуючи багаторічний досвід і практику, юристи компанії супроводжують складні
+                    проекти і досягають прийняття ряду
+                    важливих для галузі рішень. Багато з них формують практику застосування морського права в Україні.
+                    Prolegals – надійний бізнес-партнер, що підтверджується стабільним співробітництвом з міжнародними
+                    юридичними фірмами,
+                    довірою великих українських і міжнародних компаній, визнанням професійних рейтингів.</p>
+            </div>
 
+            <ul class="advantages-list">
+                <li class="advantages-item ">
+                    <div class="advantages-item-heading">
+                        <svg class="advantages-icon" width="32" height="32">
+                            <use href="./img/symbol-defs.svg#icon-experience"></use>
+                        </svg>
+                        <span class="advantages-heading">10+</span>
+                    </div>
+
+                    <p class='advantages-heading-text'>років релевантного досвіду</p>
+                </li>
+                <li class="advantages-item">
+                    <div class="advantages-item-heading">
+                        <svg class="advantages-icon" width="32" height="32">
+                            <use href="./img/symbol-defs.svg#icon-iconfinder"></use>
+                        </svg>
+                        <span class="advantages-heading">30+</span>
+                    </div>
+
+                    <p class='advantages-heading-text'>активних клієнтів, які довіряють нам свої доручення щомісячно</p>
+                </li>
+                <li class="advantages-item">
+                    <div class="advantages-item-heading">
+                        <svg class="advantages-icon" width="32" height="32">
+                            <use href="./img/symbol-defs.svg#icon-pro-bono"></use>
+                        </svg>
+                        <span class="advantages-heading">500+</span>
+                    </div>
+
+
+                    <p class='advantages-heading-text'>годин роботи «pro bono» щорічно</p>
+                </li>
+            </ul>
+        </div>
+
+
+    </section>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/mobile-menu.js"></script>
 </body>
