--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                                 <a href="./about-us.html" class="mobile-links">о нас</a>
                             </li>
                             <li class="mobile-item">
-                                <a href="" class="mobile-links">послуги</a>
+                                <a href="./services.html" class="mobile-links">послуги</a>
                             </li>
                             <li class="mobile-item">
-                                <a href="" class="mobile-links">команда</a>
+                                <a href="./team.html" class="mobile-links">команда</a>
                             </li>
                             <li class="mobile-item">
-                                <a href="" class="mobile-links">публікації</a>
+                                <a href="./publications.html" class="mobile-links">публікації</a>
                             </li>
                             <li class="mobile-item">
-                                <a href="" class="mobile-links">контакти</a>
+                                <a href="./contact.html" class="mobile-links">контакти</a>
                             </li>
                         </ul>
                     </nav>
@@ -111,16 +111,16 @@
                                 <a href="./about-us.html" class="nav-menu-links nav-menu-links-index">о нас</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links-index nav-menu-links">послуги</a>
+                                <a href="./services.html" class="nav-menu-links-index nav-menu-links">послуги</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links-index nav-menu-links">команда</a>
+                                <a href="./team.html" class="nav-menu-links-index nav-menu-links">команда</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links-index nav-menu-links">публікації</a>
+                                <a href="./publications.html" class="nav-menu-links-index nav-menu-links">публікації</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links-index nav-menu-links">контакти</a>
+                                <a href="./contact.html" class="nav-menu-links-index nav-menu-links">контакти</a>
                             </li>
                         </ul>
                     </nav>
@@ -144,7 +144,7 @@
         <!-- <section class="experience"></section> -->
 
         <section class="services">
-            <a href="" class="services-paragraph">послуги ></a>
+            <a href="./services.html" class="services-link">послуги ></a>
             <h2 class="services-title">Що ми вміємо робити краще за інших?</h2>
             <ul class="services-list">
                 <li class="services-item">
@@ -152,7 +152,7 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-shopping"></use>
                         </svg>
-                        <p class="services-name">IT та електронна комерція</p>
+                        <a href="./services-pages/services-one.html" class="services-name">IT та електронна комерція</a>
                     </div>
 
                     <p class="services-text">Нескінчений потік договорів, податкові питання, трудові відносини,
@@ -617,7 +617,7 @@
         </ul>
         <div class="publications-gradient"></div>
         <div class="btn-center">
-            <button type="button" class="show-more">
+            <button type="button" class="button show-more">
                 Ще публікації
             </button>
         </div>
