--- a/about-us.html
+++ b/about-us.html
@@ -62,16 +62,16 @@
                             <a href="" class="mobile-links current-mobile">о нас</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="" class="mobile-links">послуги</a>
+                            <a href="./services.html" class="mobile-links">послуги</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="" class="mobile-links">команда</a>
+                            <a href="./team.html" class="mobile-links">команда</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="" class="mobile-links">публікації</a>
+                            <a href="./publications.html" class="mobile-links">публікації</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="" class="mobile-links">контакти</a>
+                            <a href="./contact.html" class="mobile-links">контакти</a>
                         </li>
                     </ul>
                 </nav>
@@ -132,16 +132,16 @@
                                 <a href="" class="nav-menu-links current nav-menu-links-page">о нас</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links nav-menu-links-page">послуги</a>
+                                <a href="./services.html" class="nav-menu-links nav-menu-links-page">послуги</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links nav-menu-links-page">команда</a>
+                                <a href="./team.html" class="nav-menu-links nav-menu-links-page">команда</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links nav-menu-links-page">публікації</a>
+                                <a href="./publications.html" class="nav-menu-links nav-menu-links-page">публікації</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links nav-menu-links-page">контакти</a>
+                                <a href="./contact.html" class="nav-menu-links nav-menu-links-page">контакти</a>
                             </li>
                         </ul>
                     </nav>
@@ -197,11 +197,82 @@
                 </li>
             </ul>
         </div>
-
-
+        <div class="title-advantages-bgimg">
+            <h2 class="title-advantages">команда</h2>
+        </div>
+        <div class="advantages-top">
+            <p class="text">
+                Історично незмінна юридична професія почала переформатовуватись в останні роки. Клієнти це відчувають,
+                але юридичні
+                фірми все ще опираються еволюції. Клієнти потребують зручності, простоти, прозорої оплати. Google, IBM
+                WatsОn, Symantec
+                Clearwell доводять, що технологічна революція в юридичних послугах розпочалася і стала неминучою.
+                Якість — це те, про що ми піклуємося найбільше.
+                Все просто. Якщо ви не задоволені нашою роботою, ми повернемо гроші. Ми довіряємо нашим клієнтам. І ми
+                хочемо, щоб
+                клієнти нам теж довіряли.
+            </p>
+            <h2 class="title">Якість — це те, про що ми піклуємося найбільше.</h2>
+        </div>
     </section>
+    <section class="achievments ">
+        <h3 class="clients-title achievments-title">Досягнення</h3>
+        <ul class="owl-carousel">
+            <li class="owl-carousel-item">
+                <img class=" acievments-item-foto1" src="./img/achievments.svg" alt="logo">
+            </li>
+            <li class="owl-carousel-item">
+                <img class=" acievments-item-foto2" src="./img/achievments2.svg" alt="logo">
+            </li>
+            <li class="owl-carousel-item">
+                <img class=" acievments-item-foto3" src="./img/achievments3.svg" alt="logo">
+            </li>
+            <li class="owl-carousel-item">
+                <img class=" acievments-item-foto4" src="./img/achievments4.svg" alt="logo">
+            </li>
+        </ul>
+    </section>
+    <footer class="footer footer-about-us">
+        <div class="footer-line"></div>
+        <dir class="footer-content">
+            <div class="footer-contact">
+                <div class="footer-contact-addrs">
+                    <address>
+                        <p class="address">
+                            Одеса, Адміральський пр., 3
+                        </p>
+
+                    </address>
+
+                    <a class="links footer-text" href="https://goo.gl/maps/QzyVuSMk6kVHbR6Y7">Подивитися на
+                        мапі</a>
+                </div>
+
+                <div class="footer-contacts">
+                    <a href="" class="links footer-links-icon">
+                        <svg height="38" weight="38" class="footer-icon">
+                            <use href="./img/symbol-defs.svg#icon-facebook-oval"></use>
+                        </svg>
+                    </a>
+
+
+                    <a href="tel:+38 (050) 390 15 91" class="links footer-tel">+38 (050) 390 15 91</a>
+
+                    <a href="malto:contact@hlegals.net" class="links footer-mail">contact@hlegals.net</a>
+                </div>
+
+            </div>
+            <div class="footer-copy">
+                <p class="footer-copy-text">&#169 2021 ТОВ Юридична компанія «HLEGALS»</p>
+            </div>
+        </dir>
+
+
+    </footer>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/mobile-menu.js"></script>
-</body>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/_caroousel-about-us.js"></script>
+    < </body>
 
 </html>
