--- a/about-us.html
+++ b/about-us.html
@@ -59,7 +59,7 @@
                             </button>
                         </li>
                         <li class="mobile-item">
-                            <a href="" class="mobile-links current-mobile">о нас</a>
+                            <a href="./about-us.html" class="mobile-links current-mobile">о нас</a>
                         </li>
                         <li class="mobile-item">
                             <a href="./services.html" class="mobile-links">послуги</a>
@@ -129,7 +129,7 @@
                     <nav class="nav-menu">
                         <ul class="nav-menu-list-page">
                             <li class="nav-menu-item">
-                                <a href="" class="nav-menu-links current nav-menu-links-page">о нас</a>
+                                <a href="./about-us.html" class="nav-menu-links nav-menu-links-page current ">о нас</a>
                             </li>
                             <li class="nav-menu-item">
                                 <a href="./services.html" class="nav-menu-links nav-menu-links-page">послуги</a>
@@ -273,6 +273,6 @@
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/_caroousel-about-us.js"></script>
-    < </body>
+</body>
 
 </html>
