--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-iconfinder"></use>
                         </svg>
-                        <p class="services-name">Комплексний щоденний
-                            юридичний супровід</p>
+                        <a href="./services-pages/services-two.html" class="services-name">Комплексний щоденний
+                            юридичний супровід</a>
                     </div>
 
 
@@ -182,7 +182,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-crowdfunding"></use>
                         </svg>
-                        <p class="services-name">Структуризація корпоративних відносин</p>
+                        <a href="./services-pages/services-three.html" class="services-name">Структуризація
+                            корпоративних відносин</a>
                     </div>
 
 
@@ -197,7 +198,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-collaborative"></use>
                         </svg>
-                        <p class="services-name">Побудовa договірних відносин</p>
+                        <a href="./services-pages/services-four.html" class="services-name">Побудовa договірних
+                            відносин</a>
                     </div>
 
                     <p class="services-text">Раз на тиждень, чи тиждень на місяць у вас під боком є ваш власний юрист.
@@ -211,7 +213,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-security"></use>
                         </svg>
-                        <p class="services-name">Захист бізнесу, інтелектуальної власності</p>
+                        <a href="./services-pages/services-five.html" class="services-name">Захист бізнесу,
+                            інтелектуальної власності</a>
                     </div>
 
                     <p class="services-text">Раз на тиждень, чи тиждень на місяць у вас під боком є ваш власний юрист.
@@ -225,7 +228,7 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-lawyer"></use>
                         </svg>
-                        <p class="services-name">Судове представництво</p>
+                        <a href="./services-pages/services-six.html" class="services-name">Судове представництво</a>
                     </div>
 
                     <p class="services-text">Невелика компанія, середнього розміру, чи вже лідер ринку? Локальний бізнес
@@ -255,7 +258,7 @@
                             <img class="owl-carousel-fotos" src="./img/team-member1.png" alt="">
                         </div>
                         <div class="team-card-desctop">
-                            <a href="#" class="team-link">команда ></a>
+                            <a href="./team.html" class="team-link">команда ></a>
                             <h2 class="team-heading">
                                 Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу,
                                 навіть
