--- a/services-pages/services-five.html
+++ b/services-pages/services-five.html
@@ -162,10 +162,10 @@
         <section class="services-info container">
             <div class="services-info-top">
                 <svg class="serviced-icon serviced-icon-pages" width="44" height="44">
-                    <use class="icon" href="../img/symbol-defs.svg#icon-collaborative"></use>
+                    <use class="icon" href="../img/symbol-defs.svg#icon-security"></use>
                 </svg>
-                <h1 class="title title-info">Побудовa договірних
-                    відносин</h1>
+                <h1 class="title title-info">Захист бізнесу,
+                    інтелектуальної власності</h1>
                 <p class="text text-info">Раз на тиждень, чи тиждень на місяць у вас під боком є ваш власний юрист.
                     Будь-хто в компанії
                     може впіймати його біля
