--- a/services-pages/services-six.html
+++ b/services-pages/services-six.html
@@ -162,14 +162,13 @@
         <section class="services-info container">
             <div class="services-info-top">
                 <svg class="serviced-icon serviced-icon-pages" width="44" height="44">
-                    <use class="icon" href="../img/symbol-defs.svg#icon-collaborative"></use>
+                    <use class="icon" href="../img/symbol-defs.svg#icon-lawyer"></use>
                 </svg>
-                <h1 class="title title-info">Побудовa договірних
-                    відносин</h1>
-                <p class="text text-info">Раз на тиждень, чи тиждень на місяць у вас під боком є ваш власний юрист.
-                    Будь-хто в компанії
-                    може впіймати його біля
-                    кавоварки і просто поговорити про поточні справи замість очікування статусу update.</p>
+                <h1 class="title title-info">Судове представництво</h1>
+                <p class="text text-info">Невелика компанія, середнього розміру, чи вже лідер ринку? Локальний бізнес
+                    або
+                    транснаціональна компанія? Маєте власний
+                    юридичний відділ, чи ні?</p>
 
                 <p class="text text-info"> До того ж, з часом робота стане однотипною і нецікавою для штатного
                     юриста. А
