--- a/services.html
+++ b/services.html
@@ -175,8 +175,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-iconfinder"></use>
                         </svg>
-                        <p class="services-name">Комплексний щоденний
-                            юридичний супровід</p>
+                        <a href="./services-pages/services-two.html" class="services-name">Комплексний щоденний
+                            юридичний супровід</a>
                     </div>
 
 
@@ -191,7 +191,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-crowdfunding"></use>
                         </svg>
-                        <p class="services-name">Структуризація корпоративних відносин</p>
+                        <a href="./services-pages/services-three.html" class="services-name">Структуризація
+                            корпоративних відносин</a>
                     </div>
 
 
@@ -206,7 +207,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-collaborative"></use>
                         </svg>
-                        <p class="services-name">Побудовa договірних відносин</p>
+                        <a href="./services-pages/services-four.html" class="services-name">Побудовa договірних
+                            відносин</a>
                     </div>
 
                     <p class="services-text">Раз на тиждень, чи тиждень на місяць у вас під боком є ваш власний юрист.
@@ -220,7 +222,8 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-security"></use>
                         </svg>
-                        <p class="services-name">Захист бізнесу, інтелектуальної власності</p>
+                        <a href="./services-pages/services-five.html" class="services-name">Захист бізнесу,
+                            інтелектуальної власності</a>
                     </div>
 
                     <p class="services-text">Раз на тиждень, чи тиждень на місяць у вас під боком є ваш власний юрист.
@@ -234,7 +237,7 @@
                         <svg class="serviced-icon" width="44" height="44">
                             <use class="icon" href="./img/symbol-defs.svg#icon-lawyer"></use>
                         </svg>
-                        <p class="services-name">Судове представництво</p>
+                        <a href="./services-pages/services-six.html" class="services-name">Судове представництво</a>
                     </div>
 
                     <p class="services-text">Невелика компанія, середнього розміру, чи вже лідер ринку? Локальний бізнес
@@ -325,10 +328,10 @@
         </ul>
 
     </section>
-    <footer class="footer">
-
+    <footer class="footer footer-about-us">
+        <div class="footer-line footer-line-servise"></div>
         <dir class="footer-content">
-            <div class="footer-contact-service">
+            <div class="footer-contact">
                 <div class="footer-contact-addrs">
                     <address>
                         <p class="address">
