--- a/team-page/person-four.html
+++ b/team-page/person-four.html
@@ -8,7 +8,7 @@
     <title>Hlegals</title>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="../css/main.min.css">
 </head>
 
 <body id="body">
@@ -31,19 +31,19 @@
 
             <div class="header-mobile">
                 <div class="header-mobile-logo">
-                    <a href="./index.html" class="logo-mobile">
-                        <img src="./img/Logo-on-white.svg" width="78" height="31" alt="logo">
+                    <a href="../index.html" class="logo-mobile">
+                        <img src="../img/Logo-on-white.svg" width="78" height="31" alt="logo">
                     </a>
 
-                    <img class="logo-splash" src="./img/slash.svg" alt="">
+                    <img class="logo-splash" src="../img/slash.svg" alt="">
                     <span class="logo-title">команда</span>
-                    <img class="logo-splash-p" src="./img/symbol-slash.svg" alt="">
+                    <img class="logo-splash-p" src="../img/symbol-slash.svg" alt="">
 
                 </div>
 
                 <button type="button" id="mobile-menu-button" class="menu-button menu-button-open menu-button-open ">
                     <svg class="menu-button__icon " width="18" height="18">
-                        <use class=" icon-menu-about" id="icon-menu" href="./img/symbol-defs.svg#icon-hamburger"></use>
+                        <use class=" icon-menu-about" id="icon-menu" href="../img/symbol-defs.svg#icon-hamburger"></use>
 
                     </svg>
                 </button>
@@ -54,24 +54,24 @@
                         <li class="mobile-item-button">
                             <button type="button" class="mobile-menu-button menu-button" id="mobile-nav-close">
                                 <svg class="menu-button__close" width="18" height="18">
-                                    <use class="icon-close" href="./img/symbol-defs.svg#icon-close"></use>
+                                    <use class="icon-close" href="../img/symbol-defs.svg#icon-close"></use>
                                 </svg>
                             </button>
                         </li>
                         <li class="mobile-item">
-                            <a href="./about-us.html" class="mobile-links ">о нас</a>
+                            <a href="../about-us.html" class="mobile-links ">о нас</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="./services.html" class="mobile-links">послуги</a>
+                            <a href="../services.html" class="mobile-links">послуги</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="./team.html" class="mobile-links current-mobile">команда</a>
+                            <a href="../team.html" class="mobile-links current-mobile">команда</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="./publications.html" class="mobile-links">публікації</a>
+                            <a href="../publications.html" class="mobile-links">публікації</a>
                         </li>
                         <li class="mobile-item">
-                            <a href="./contact.html" class="mobile-links">контакти</a>
+                            <a href="../contact.html" class="mobile-links">контакти</a>
                         </li>
                     </ul>
                 </nav>
@@ -81,12 +81,12 @@
         </div>
         <div class="desctop-menu-page">
             <div class="decstop-menu-logo-1440">
-                <a href="./index.html">
-                    <img src="./img/Logo-on-white.svg" class="logo logo-page" alt="logo">
+                <a href="../index.html">
+                    <img src="../img/Logo-on-white.svg" class="logo logo-page" alt="logo">
                 </a>
-                <img class="logo-splash" src="./img/slash.svg" alt="">
+                <img class="logo-splash" src="../img/slash.svg" alt="">
                 <span class="logo-title">команда</span>
-                <img class="logo-splash-p" src="./img/symbol-slash.svg" alt="">
+                <img class="logo-splash-p" src="../img/symbol-slash.svg" alt="">
             </div>
             <div class=" desctop-menu-page-1440">
                 <div class="top-navigation top-navigation-page">
@@ -109,7 +109,7 @@
                     <a href="" class="header-icon_links">
 
                         <svg class="header-icon" height="24" weight="24">
-                            <use class="header-icon_facebook-page" href="./img/symbol-defs.svg#icon-facebook-oval">
+                            <use class="header-icon_facebook-page" href="../img/symbol-defs.svg#icon-facebook-oval">
                             </use>
                         </svg>
                     </a>
@@ -118,30 +118,30 @@
 
                 <div class="menu-page">
                     <div class="decstop-menu-logo">
-                        <a href="./index.html">
-                            <img src="./img/Logo-on-white.svg" class="logo logo-page" alt="logo">
+                        <a href="../index.html">
+                            <img src="../img/Logo-on-white.svg" class="logo logo-page" alt="logo">
                         </a>
-                        <img class="logo-splash" src="./img/slash.svg" alt="">
+                        <img class="logo-splash" src="../img/slash.svg" alt="">
                         <span class="logo-title">команда</span>
-                        <img class="logo-splash-p" src="./img/symbol-slash.svg" alt="">
+                        <img class="logo-splash-p" src="../img/symbol-slash.svg" alt="">
                     </div>
 
                     <nav class="nav-menu">
                         <ul class="nav-menu-list-page">
                             <li class="nav-menu-item">
-                                <a href="./about-us.html" class="nav-menu-links  nav-menu-links-page">о нас</a>
+                                <a href="../about-us.html" class="nav-menu-links  nav-menu-links-page">о нас</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="./services.html" class="nav-menu-links nav-menu-links-page">послуги</a>
+                                <a href="../services.html" class="nav-menu-links nav-menu-links-page">послуги</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="./team.html" class="nav-menu-links nav-menu-links-page current">команда</a>
+                                <a href="../team.html" class="nav-menu-links nav-menu-links-page current">команда</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="./publications.html" class="nav-menu-links nav-menu-links-page">публікації</a>
+                                <a href="../publications.html" class="nav-menu-links nav-menu-links-page">публікації</a>
                             </li>
                             <li class="nav-menu-item">
-                                <a href="./contact.html" class="nav-menu-links nav-menu-links-page">контакти</a>
+                                <a href="../contact.html" class="nav-menu-links nav-menu-links-page">контакти</a>
                             </li>
                         </ul>
                     </nav>
@@ -151,70 +151,49 @@
         </div>
 
     </header>
-    <div class="container title-team ">
-        <h1 class="title ">
-            Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях,
-            коли
-            більшість
-            безсилі.
-        </h1>
-    </div>
-    <ul class="team-list container">
-        <li class="team-item">
-            <img src="./img/team-member1.png" alt="" class="team-item-foto">
-            <div class="team-list-container">
-                <h2 class="team-name">Олександр Кац</h2>
-                <p class="team-member-occupation">Керуючий партнер</p>
-                <a href="./team-page/person-one.html" class="team-item-link">></a>
+    <main class="main-container">
+        <div class="person-container">
+            <div>
+                <img src="../img/team-member4.png" alt="" class="person-page">
             </div>
 
-        </li>
-        <li class="team-item">
-            <img src="./img/team-member2.png" alt="" class="team-item-foto">
-            <div class="team-list-container">
-                <h2 class="team-name">Валерій Кобзар</h2>
-                <p class="team-member-occupation">Equity partner, Attorney-at-law</p>
-                <a href="./team-page/person-two.html" class="team-item-link">></a>
-            </div>
+            <div class="person-description">
+                <h1 class="title">Владислав Курич</h1>
+                <ul class="person-contact">
+                    <li class="person-contact-item team-member-occupation">
+                        Associate
+                    </li>
+                    <li class="person-contact-item person-contact-items">
+                        <a href="malto:kac@hlegals.net" class="person-contacts">kac@hlegals.net</a>
+                    </li>
+                    <li class="person-contact-item">
+                        <a href="" class="person-contacts">Профіль в LinkedIn</a>
+                    </li>
 
-        </li>
-        <li class="team-item">
-            <img src="./img/team-member3.png" alt="" class="team-item-foto">
-            <div class="team-list-container">
-                <h2 class="team-name">Владислав Мельник</h2>
-                <p class="team-member-occupation">Associate</p>
-                <a href="./team-page/person-three.html" class="team-item-link">></a>
-            </div>
 
-        </li>
-        <li class="team-item">
-            <img src="./img/team-member4.png" alt="" class="team-item-foto">
-            <div class="team-list-container">
-                <h2 class="team-name">Владислав Курич</h2>
-                <p class="team-member-occupation">Associate</p>
-                <a href="./team-page/person-four.html" class="team-item-link">></a>
-            </div>
+                </ul>
 
-        </li>
-        <li class="team-item">
-            <img src="./img/team-member5.png" alt="" class="team-item-foto">
-            <div class="team-list-container">
-                <h2 class="team-name">Юлія Гудименко</h2>
-                <p class="team-member-occupation">Associate</p>
-                <a href="./team-page/person-five.html" class="team-item-link">></a>
+                <div class="person-line"></div>
+                <p class="person-text">Олександр очолює практику міжнародної торгівлі та шиппінгу. Він спеціалізується
+                    на
+                    вирішенні спорів, пов'язаних з
+                    купівлею-продажем сировинних товарів і перевезенням товарів морем.</p>
+                <p class="person-text">Десис представляє інтереси судновласників, експедиторів, вантажовласників,
+                    морських
+                    агентів, контейнерних ліній, а також
+                    міжнародних банків і клубів P & I.</p>
+                <h2 class="person-title">Освіта</h2>
+                <p class="person-text">Національний університет «Одеська юридична академія», магістр права.</p>
+                <h2 class="person-title">Досвід роботи</h2>
+                <p class="person-text">До його професійного досвіду відноситься врегулювання суперечок за англійським
+                    правом і
+                    представництво інтересів в
+                    іноземних комерційних арбітражах, таких як GAFTA, FOSFA та LMAA. Данило також представляє інтереси
+                    клієнтів у державних
+                    судах України по аналогічним спорах, а також в МКАС і МАК при ТПП України</p>
             </div>
-
-        </li>
-        <li class="team-item">
-            <img src="./img/team-member6.png" alt="" class="team-item-foto">
-            <div class="team-list-container">
-                <h2 class="team-name">Оксана Кобзар</h2>
-                <p class="team-member-occupation">Equity partner, Attorney-at-law</p>
-                <a href="./team-page/person-six.html" class="team-item-link">></a>
-            </div>
-
-        </li>
-    </ul>
+        </div>
+    </main>
     <footer class="footer footer-about-us">
         <div class="footer-line footer-line-servise"></div>
         <dir class="footer-content">
@@ -234,7 +213,7 @@
                 <div class="footer-contacts">
                     <a href="" class="links footer-links-icon">
                         <svg height="38" weight="38" class="footer-icon">
-                            <use href="./img/symbol-defs.svg#icon-facebook-oval"></use>
+                            <use href="../img/symbol-defs.svg#icon-facebook-oval"></use>
                         </svg>
                     </a>
 
@@ -252,8 +231,8 @@
 
 
     </footer>
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+
+    <script src="../js/mobile-menu.js"></script>
 
 </body>
 
