--- a/contact.html
+++ b/contact.html
@@ -151,48 +151,62 @@
         </div>
 
     </header>
-    <main class="main-container ">
-        <div>
-            <address>
-                <b class="contact-address-b contact-text">Одеса,</b>
-                <p class="contact-address contact-text">Адміральський пр., 3</p>
-            </address>
-            <div class="person-line"></div>
-            <a href="tel:+38 (050) 390 15 91" class="contact-tel contact-text">+38 (050) 390 15 91</a>
-            <a href="malto:contact@hlegals.net" class="contact-mail contact-text">contact@hlegals.net</a>
-            <div class="person-line"></div>
-            <div class="contact-link">
-                <a href="" class="links footer-links-icon">
-                    <svg height="38" weight="38" class="footer-icon">
-                        <use href="./img/symbol-defs.svg#icon-facebook-oval"></use>
-                    </svg>
-                </a>
-                <p class=" contact-link-text">Наша сторінка в фейсбуці</p>
+    <main>
+        <div class="contact-desktop main-container">
+            <div class=" main-container-contact">
+                <address>
+                    <b class="contact-address-b contact-text">Одеса,</b>
+                    <p class="contact-address contact-text">Адміральський пр., 3</p>
+                </address>
+                <div class="person-line"></div>
+                <p>
+                    <a href="tel:+38 (050) 390 15 91" class="contact-tel contact-text">+38 (050) 390 15 91</a>
+                </p>
+                <p>
+                    <a href="malto:contact@hlegals.net" class="contact-mail contact-text">contact@hlegals.net</a>
+                </p>
+
+                <div class="person-line"></div>
+                <div class="contact-link">
+                    <a href="" class="links footer-links-icon">
+                        <svg height="38" weight="38" class="footer-icon">
+                            <use href="./img/symbol-defs.svg#icon-facebook-oval"></use>
+                        </svg>
+                    </a>
+                    <p class=" contact-link-text">Наша сторінка в фейсбуці</p>
+                </div>
+            </div>
+            <div class="contact-modal">
+
+
+                <form class="modal-form">
+                    <h1 class="modal-title modal-title-contact">Ми хотіли б Вам допомогти</h1>
+
+
+                    <input class="input text" type='text' name="name" placeholder="Iм’я">
+                    <textarea class="input text" class="modal-textarea modal-text" name="coment" rows="6"
+                        placeholder="Повідомлення"></textarea>
+                    <p class="form-question">Як вам відповісти?</p>
+                    <input class="input input-text text" type='tel' name="tel" placeholder="Номер телефона">
+                    <input class="input text" type='email' name="email" placeholder="Чи email">
+                    <div class="modal-btn">
+                        <button type="submit" class="button modal-button">Надіслати запит</button>
+                    </div>
+
+                </form>
+
             </div>
         </div>
-        <div class="modal">
 
-
-            <form class="modal-form js-speaker-form">
-                <div class="form-top">
-                    <h1 class="modal-title">Ми хотіли б Вам допомогти</h1>
-                    <svg data-modal-close class="menu-button__close" width="18" height="18">
-                        <use class="icon-close" href="../img/symbol-defs.svg#icon-close"></use>
-                    </svg>
-                </div>
-
-                <input class="input text" type='text' name="name" placeholder="Iм’я">
-                <textarea class="input text" class="modal-textarea modal-text" name="coment" rows="6"
-                    placeholder="Повідомлення"></textarea>
-                <p class="form-question">Як вам відповісти?</p>
-                <input class="input input-text text" type='tel' name="tel" placeholder="Номер телефона">
-                <input class="input text" type='email' name="email" placeholder="Чи email">
-                <div class="modal-btn">
-                    <button type="submit" class="button modal-button">Надіслати запит</button>
-                </div>
-
-            </form>
+        <div class="container-map">
+            <div class="map-wrap">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25355.1802353547!2d30.72153491252934!3d46.43729483790365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c63396894457b7%3A0x7f6c5236cbcb70c8!2sAdmiral&#39;s&#39;kyi%20Ave%2C%203%2C%20Odesa%2C%20Odes&#39;ka%20oblast%2C%2065000!5e0!3m2!1sen!2sua!4v1630314197658!5m2!1sen!2sua"
+                    width="1440" height="600" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+            </div>
         </div>
+
     </main>
     <footer class="footer">
         <div class="footer-line footer-line-servise"></div>
