--- a/services-pages/services-four.html
+++ b/services-pages/services-four.html
@@ -269,115 +269,123 @@
 
     </section>
     <section class="publications">
-        <h3 class="publications-paragraph">Публікації></h3>
+        <a href="../publications.html" class="publications-paragraph">Публікації ></a>
         <h2 class="services-title">Рекомендуємо</h2>
-        <ul class="card-list-grid ">
-            <li class="card-item-grid article-one item">
+        <ul class="masonry-container">
+            <li class="masonry-item">
                 <article class="card">
                     <div class="card-thmb">
-                        <h3 class="card-button">Валютний контроль помер, хай живе валютний
-                            контроль!</h3>
-                        <p class="card-time">14 червня</p>
+                        <a href="../publications-page/publication-page-com-one.html" class="card-button">Валютний
+                            контроль помер, хай живе валютний
+                            контроль!</a>
+                        <span class="card-time">14 червня</span>
                     </div>
 
                     <div class="card-description">
-                        <div class="card-line"></div>
-                        <p class="card-text">Експерти проводять конференції, круглі столи та іншого штибу заходи на тему
+                        <p class="masonry-item-text">Експерти проводять конференції, круглі столи та іншого штибу
+                            заходи
+                            на тему
                             «лібералізація валютного законодавства».
                             Юристи-експерти-новелісти стирають пальці об «ctrl+c/ctrl+v».</p>
                     </div>
                 </article>
             </li>
-            <li class="card-item-grid article-two item">
+            <li class="masonry-item">
                 <article class="card ">
                     <img srcset="../img/article-1-320.jpg  320w ../img/article-1-640.jpg 640w"
                         src="../img/article-1-320.jpg" alt="publication" class="card-img">
                     <div class="card-thmb">
-                        <h3 class="card-button">Equity associate</h3>
-                        <p class="card-time">22 квітня</p>
+                        <a href="" class="card-button">Equity associate</a>
+                        <span class="card-time">22 квітня</span>
                     </div>
 
                     <div class="card-description">
-                        <div class="card-line"></div>
-                        <p class="card-text">На проектах я джун. При цьому я співвласник юридичної фірми. Як це
+
+                        <p class="masonry-item-text">На проектах я джун. При цьому я співвласник юридичної фірми. Як
+                            це
                             відбулося. Перед вступом батьки мені казали, що якщо
                             буду…</p>
                     </div>
 
                 </article>
             </li>
-            <li class="card-item-grid article-three item">
+            <li class="masonry-item">
                 <article class="card">
 
                     <img srcset="../img/article-2-320.jpg  320w ../img/article-2-640.jpg 640w"
                         src="../img/article-2-320.jpg" alt="publication" class="card-img">
 
                     <div class="card-thmb">
-                        <h3 class="card-button">Заповіт міленіала</h3>
-                        <p class="card-time">19 серпня</p>
+                        <a href="" class="card-button">Заповіт міленіала</a>
+                        <span class="card-time">19 серпня</span>
                     </div>
 
                     <div class="card-description">
-                        <div class="card-line"></div>
-                        <p class="card-text">Що і як передаватимуть у спадщину сучасні влогери, опініон лідери і
+
+                        <p class="masonry-item-text">Що і як передаватимуть у спадщину сучасні влогери, опініон
+                            лідери і
                             криптомільйонери Типовий спадок українського
                             покоління Х виглядає так: квартира у…</p>
                     </div>
                 </article>
             </li>
-            <li class="card-item-grid article-four item">
+            <li class="masonry-item">
                 <article class="card">
 
                     <img srcset="../img/article-3-320.jpg  320w ../img/article-3-640.jpg 640w"
                         src="../img/article-3-320.jpg" alt="publication" class="card-img">
                     <div class="card-thmb">
-                        <h3 class="card-button">Штраф для «Корпорації добра»: що буде з Google
+                        <a href="" class="card-button">Штраф для «Корпорації добра»: що буде з Google
                             та
                             іншими за
-                            порушення GDPR</h3>
-                        <p class="card-time">29 вересня</p>
+                            порушення GDPR</a>
+                        <span class="card-time">29 вересня</span>
                     </div>
                     <div class="card-description">
-                        <div class="card-line"></div>
-                        <p class="card-text">І чому стягнення у 50 млн євро може стати доленосним прецедентом За
+
+                        <p class="masonry-item-text">І чому стягнення у 50 млн євро може стати доленосним
+                            прецедентом За
                             матеріалами Mind.ua 21 січня Національна комісія із
                             захисту даних.</p>
                     </div>
                 </article>
             </li>
-            <li class="card-item-grid article-five item">
+            <li class="masonry-item">
                 <article class="card">
 
                     <img srcset="../img/article-4-320.jpg  320w ../img/article-4-640.jpg 640w"
                         src="../img/article-4-320.jpg" alt="publication" class="card-img">
                     <div class="card-thmb">
-                        <h3 class="card-button">Закон про мови: як зробити свій сайт
-                            відповідним</h3>
-                        <p class="card-time">19 серпня</p>
+                        <a href="" class="card-button">Закон про мови: як зробити свій сайт
+                            відповідним</a>
+                        <span class="card-time">19 серпня</span>
                     </div>
                     <div class="card-description">
-                        <div class="card-line"></div>
-                        <p class="card-text">Наталія Кирик, керівник контент студії Wordfactory.ua По-перше, це красиво!
+
+                        <p class="masonry-item-text">Наталія Кирик, керівник контент студії Wordfactory.ua По-перше,
+                            це
+                            красиво!
                             Це аргумент номер один на користь
                             україномовного сайту. По-друге, це ефективно.</p>
                     </div>
                 </article>
             </li>
-            <li class="card-item-grid article-six item">
+            <li class="masonry-item">
                 <article class="card">
 
                     <img srcset="../img/article-5-320.jpg  320w ../img/article-5-640.jpg 640w"
                         src="../img/article-5-320.jpg" alt="publication" class="card-img">
                     <div class="card-thmb">
-                        <h3 class="card-button">Компенсація витрат на навчання дитини в
+                        <a href="" class="card-button">Компенсація витрат на навчання дитини в
                             дитячому садку
                             та
-                            школі</h3>
-                        <p class="card-time">5 Лютого 2018</p>
+                            школі</a>
+                        <span class="card-time">5 Лютого 2018</span>
                     </div>
                     <div class="card-description">
-                        <div class="card-line"></div>
-                        <p class="card-text">Про що йде мова В червні цього року Верховна Рада внесла зміни до
+
+                        <p class="masonry-item-text">Про що йде мова В червні цього року Верховна Рада внесла зміни
+                            до
                             Податкового кодексу України. Відтепер батьки, які
                             отримують офіційну…</p>
                     </div>
